@@ -1,0 +1,10 @@
+[Desktop Entry]
+Encoding=UTF-8
+Version=1.0
+Icon=sylpheed-claws
+_Name=Sylpheed Claws
+Type=Application
+StartupNotify=true
+X-Terminal-Binaries=sylpheed-claws;
+X-Terminal-Category=MailReader
+X-Terminal-Command=%B --compose "%s"
