@@ -1,3 +1,9 @@
+2006-03-11	Benedikt Meurer <benny@xfce.org>
+
+	* helpers/sylpheed-claws.desktop.in, helpers/Makefile.am: Add Sylpheed
+	  Claws as MailReader to the helper list. Thanks to Bernhard Walle
+	  <bernhard.walle@gmx.de>.
+
 2006-03-06	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Fix PACKAGE_BUGREPORT.
